unpackaged/main/default/objects/Account/fields/API_Field_test__c.field-meta.xml
<CustomField>
    <fullName>API_Field_test__c</fullName>
    <label>API Field test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Testing again</fullName>
            </value>
            <value>
                <fullName>Testing one more time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>