unpackaged/main/default/objects/Account/fields/Current_Mood__c.field-meta.xml
<CustomField>
    <fullName>Current_Mood__c</fullName>
    <label>Current Mood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Indifferent</fullName>
            </value>
            <value>
                <fullName>Sad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>