unpackaged/main/default/objects/Account/fields/Next_Review_Objective__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Objective__c</fullName>
    <label>Next Review Objective</label>
    <length>20</length>
    <type>Text</type>
</CustomField>