unpackaged/main/default/objects/Account/fields/Picklist_Alpha__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Alpha__c</fullName>
    <label>Picklist Alpha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>