unpackaged/main/default/objects/Account/fields/Testing_for_Nicole__c.field-meta.xml
<CustomField>
    <fullName>Testing_for_Nicole__c</fullName>
    <label>Testing for Nicole</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Daniel</valueSetName>
    </valueSet>
</CustomField>